# my_courses

./: README.md
ai基础/: README.md
ai基础/yolov8_helmet_detection/: README.md
ai基础/yolov8_helmet_detection/detection/: README.md  pth2onnx.py
人工智能基础/yolov8_helmet_detection/: README.md
人工智能基础/yolov8_helmet_detection/detection/: README.zh-CN.md  predict.py
人工智能基础/yolov8_helmet_detection/ui/: README.md  camera.qrc  camera_rc.py  detect.py  main.py  main_window.ui  main_window_ui.py  requirements.txt  untitled.ui  untitled_ui.py
医学信息处理/期末任务_肝脏图像分割/: README.md  健康与医学信息处理 实验报告.docx
医学信息处理/期末任务_肝脏图像分割/seg/: README.md  requirements.txt
图像处理与机器视觉/homework/: README.md
图像处理与机器视觉/homework/algorithm&openmp/: CMakeLists.txt  d_type.h  main.cpp  sad_ssd_ncc.cpp  sad_ssd_ncc.h  sgbm.cpp  sgbm.h  val.cpp  val.h
图像处理与机器视觉/homework/calibrate/: CMakeLists.txt  capture.cpp  extrinsics.yml  intrinsics.yml  new_calib.xml  rectify.cpp  stereo_calib.cpp  stereo_match.cpp
大数据与数据工程/: reading_homework.docx
大数据与数据工程/final_homework/: 618.csv  618.ipynb  618.txt  QQ_wordcloud618.html  README.md  tongji.html  tongji.ipynb
大数据与数据工程/sql_homework/: code.sql
智能芯片与系统实践/: README.md
智能芯片与系统实践/期末大作业-基于PYNQ的智能算法/: README.md  [7]智能芯片与系统实践_大作业报告.docx  readme.txt
智能芯片与系统实践/期末大作业-基于PYNQ的智能算法/main_code/: QRcode_detect_pynq.ipynb  (+3 more)
机器学习/: README.md
机器学习/homework/: DataDescription.txt  F1_score.ipynb  README.md  requirements.txt  solve.ipynb  test.csv  test_pred.csv  train.csv  val.csv  val_groundtruth.csv  val_pred.csv  val_pred_example.csv
机器学习/notes/: README.md
深度学习/期末大作业/: README.md
(+68 files in other folders)
